Try to fix alignment on mobile
Added transform:translate to box scaling to see if fixes appearance on
mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,13 +16,13 @@ body {
 
 .box {
     background-color: #006AA7;
-    width: 35%;
+    width: 50%;
     height: auto;
     left: 50%;
-    margin-left: -259px;
     position: relative;
     border: 4px solid black;
     padding: 10px;
+    transform: translate(-50%, 0%);
   }
 
   .box img{
